--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 	</script>
 	<script type="text/javascript">
         sap.ui.getCore().attachInit(function () {
-           sap.ui.xmlview({
-              viewName : "myapp.view.App"
-           }).placeAt("content");
+			new sap.ui.core.ComponentContainer({
+				name: "myapp"
+			}).placeAt("content");
+			// sap.ui.xmlview({
+			// 	viewName : "myapp.view.App"
+			// }).placeAt("content");
         });
   </script>
 </head>
