--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		data-sap-ui-libs="sap.m"
         data-sap-ui-compatVersion="edge"
         data-sap-ui-preload="async"
-        data-sap-ui-resourceroots='{"myapp" : "./"}'>
+        data-sap-ui-resourceroots="{'myapp' : './'}">
 	</script>
 	<script type="text/javascript">
         sap.ui.getCore().attachInit(function () {
